reconfigure docker, refactoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,13 @@
 version: '2'
 
 services:
-  nginx:
-    build: docker/nginx
+  apache:
+    image: geerlingguy/php-apache:latest
+    container_name: travelBlog_apache
     ports:
       - 8080:80
-    volumes_from:
-      - app
-  app:
-    command: "true"
-    image: alpine:3.4
     volumes:
-      - .:/var/www/app
-  php:
-    build: docker/php
-    expose:
-      - 9000
-    volumes:
-      - composer-cache:/composer/cache
-    volumes_from:
-      - app
+      - ./:/var/www/html
 
 volumes:
   composer-cache:
